--- a/encriptador.html
+++ b/encriptador.html
@@ -20,7 +20,7 @@
         "u": "ufat"
     };
 
-    // Función de encripción
+    // Función de encriptación
     function encriptar(texto) {
         let string_encriptada = "";
         // Iterar por el largo del texto
@@ -36,7 +36,7 @@
         return string_encriptada;
     }
 
-    // Diccionario inverso para desencriptar.
+    // Diccionario inverso para desencriptación.
     var reverseDict = {
         "ai": "a",
         "enter": "e",
@@ -45,7 +45,7 @@
         "ufat": "u"
     };
 
-    // Función de desencripción
+    // Función de desencriptación
     function desencriptar(texto_encriptado) {
         var texto = "";
         var i = 0;
